--- a/ActivityDiagram/ActivityDiagram/View/App.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/App.xaml
@@ -5,8 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:ViewShapes="clr-namespace:ActivityDiagram.View.Shapes"
-             xmlns:Model="clr-namespace:ActivityDiagram.Model"
+            
              xmlns:View="clr-namespace:ActivityDiagram.View"
+              xmlns:Model="clr-namespace:ActivityDiagram.Model"
 			 xmlns:ignore="http://www.galasoft.ch/ignore"
              StartupUri="MainWindow.xaml"
              mc:Ignorable="d ignore">
@@ -23,6 +24,12 @@
         <DataTemplate DataType="{x:Type Model:Circle}">
             <Canvas>
                 <ViewShapes:CircleUserControl/>
+            </Canvas>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type Model:ActionActivity}">
+            <Canvas>
+                <ViewShapes:ActionActivityUserControl/>
             </Canvas>
         </DataTemplate>
 
