--- a/ActivityDiagram/ActivityDiagram/View/MainWindow.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/MainWindow.xaml
@@ -22,6 +22,7 @@
         <ItemsControl ItemsSource="{Binding Circles}"/>
         <ItemsControl ItemsSource="{Binding Triangles}"/>
         <ItemsControl ItemsSource="{Binding Lines}"/>
+        <ItemsControl ItemsSource="{Binding ActionActivity}"/>
 
 
 
