--- a/ActivityDiagram/ActivityDiagram/View/Shapes/DecisionUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/DecisionUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ActivityDiagram.View.Shapes.RectangleUserControl"
+﻿<UserControl x:Class="ActivityDiagram.View.Shapes.DecisionUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,14 +10,16 @@
              Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" Width="{Binding Width}" Height="{Binding Height}"
              d:DesignHeight="100" d:DesignWidth="100">
 
-      
+
     <Grid>
         <Ellipse Name="northPoint" HorizontalAlignment="Center" VerticalAlignment="Top" Width="10" Height="10" Margin="-4" Fill="Gray"  Panel.ZIndex="2" Visibility="{Binding Visibility}"></Ellipse>
         <Ellipse Name="southPoint" HorizontalAlignment="Center" VerticalAlignment="Bottom" Width="10" Height="10" Margin="-4" Fill="Gray" Panel.ZIndex="2" Visibility="{Binding Visibility}"></Ellipse>
         <Ellipse Name="eastPoint" HorizontalAlignment="Right" VerticalAlignment="Center" Width="10" Height="10"  Margin="-4" Fill="Gray" Panel.ZIndex="2" Visibility="{Binding Visibility}"></Ellipse>
         <Ellipse Name="westPoint" HorizontalAlignment="Left" VerticalAlignment="Center" Width="10" Height="10"  Margin="-4" Fill="Gray" Panel.ZIndex="2" Visibility="{Binding Visibility}"></Ellipse>
         <Rectangle Name="Rect" Stroke="Black" StrokeThickness="4" Fill="White">
-            
+            <Rectangle.LayoutTransform>
+                <RotateTransform Angle="-45"/>
+            </Rectangle.LayoutTransform>
 
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseEnter">
