--- a/ActivityDiagram/ActivityDiagram/View/Shapes/LineUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/LineUserControl.xaml
@@ -6,5 +6,5 @@
              xmlns:local="clr-namespace:ActivityDiagram.View.Shapes"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="100">
-    <Line Stroke="Red" X1="{Binding From.X}" Y1="{Binding From.Y}" X2="{Binding To.X}" Y2="{Binding To.Y}" StrokeThickness="10"/>
+    <Line Stroke="Red" X1="{Binding From.CanvasCenterX}" Y1="{Binding From.CanvasCenterY}" X2="{Binding To.CanvasCenterX}" Y2="{Binding To.CanvasCenterY}" StrokeThickness="10"/>
 </UserControl>
