--- a/ActivityDiagram/ActivityDiagram/View/Sidepanel.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Sidepanel.xaml
@@ -11,7 +11,10 @@
             <GroupBox Header="Shapes">
                 <StackPanel>
                     <Button Content="Add Circle" Command="{Binding AddCircleCommand}"/> 
-                    <Button Content="Add Square" Command="{Binding AddSquareCommand}"/>
+                    <Button Content="Add Decision" Command="{Binding AddDecisionCommand}"/>
+                    <Button Content="Add Action" Command="{Binding AddActionActivityCommand}"/>
+                    <Button Content="Add Split/Join" Command="{Binding AddSplitJoinCommand}"/>
+                    <Button Content="Add End" Command="{Binding AddEndCommand}"/>
                     <DataGrid x:Name="shapesControl" Height="140" ItemsSource="{Binding Shapes}" HeadersVisibility="Column" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False">
                         <DataGrid.Columns>
                             <DataGridTextColumn Binding="{Binding Number}" Header="Number" Width="*" IsReadOnly="True"/>
