--- a/ActivityDiagram/ActivityDiagram/View/Shapes/ActionActivityUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/ActionActivityUserControl.xaml
@@ -9,7 +9,7 @@
 
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="300">
-    <Rectangle Name="Activity" Stroke="Black" StrokeThickness="4" Fill="White" RadiusX="20" RadiusY="20">
+    <Rectangle Name="Activity" Width="300" Height="100" Stroke="Black" StrokeThickness="4" Fill="White" RadiusX="20" RadiusY="20">
         <i:Interaction.Triggers>
             <i:EventTrigger EventName="MouseEnter">
                 <cmd:EventToCommand Command="{Binding DataContext.MouseHoverShapeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
