--- a/ActivityDiagram/ActivityDiagram/View/Shapes/ActionActivityUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/ActionActivityUserControl.xaml
@@ -6,10 +6,11 @@
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:ActivityDiagram.View.Shapes"
-
              mc:Ignorable="d" 
-             d:DesignHeight="100" d:DesignWidth="300">
-    <Rectangle Name="Activity" Width="300" Height="100" Stroke="Black" StrokeThickness="4" Fill="White" RadiusX="20" RadiusY="20">
+              Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" Width="{Binding Width}" Height="{Binding Height}"
+             d:DesignHeight="100" d:DesignWidth="200">
+    
+    <Rectangle Name="Activity" Width="200" Height="75" Stroke="Black" StrokeThickness="4" Fill="White" RadiusX="20" RadiusY="20">
         <i:Interaction.Triggers>
             <i:EventTrigger EventName="MouseEnter">
                 <cmd:EventToCommand Command="{Binding DataContext.MouseHoverShapeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}}" PassEventArgsToCommand="True"/>
