--- a/ActivityDiagram/ActivityDiagram/View/Shapes/Bars.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/Bars.xaml
@@ -1,14 +1,13 @@
-﻿<UserControl x:Class="ActivityDiagram.View.Bars"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl x:Class="ActivityDiagram.View.Shapes.Bars"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-            
-              xmlns:cmd="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Platform"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:cmd="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Platform"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:ActivityDiagram.View.Shapes"
-              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              mc:Ignorable="d" 
-             d:DesignHeight="40" d:DesignWidth="500">
+              Canvas.Left="{Binding X}" Canvas.Top="{Binding Y}" Width="{Binding Width}" Height="{Binding Height}"
+             d:DesignHeight="100" d:DesignWidth="200">
     <Rectangle Name="Activity" Stroke="Black" StrokeThickness="4" Fill="Black" >
 
         <i:Interaction.Triggers>
