--- a/ActivityDiagram/ActivityDiagram/View/Shapes/EndUserControl.xaml
+++ b/ActivityDiagram/ActivityDiagram/View/Shapes/EndUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ActivityDiagram.View.Shapes.End"
+﻿<UserControl x:Class="ActivityDiagram.View.Shapes.EndUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -44,7 +44,7 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-           
+
         </Grid>
     </Grid>
 </UserControl>
